Fix some layout issues and make it look better a little bit

--- a/styles.css
+++ b/styles.css
@@ -17,8 +17,9 @@ body {
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    width: 540px;
+    width: 530px;
     height: 714px;
+    box-shadow: rgb(54, 54, 54) 0px 20px 30px -10px;
 }
 .inputScreen {
     display: flex;
@@ -28,7 +29,7 @@ body {
     background-color: rgb(34, 34, 34);
     font-size: 34px;
     height: 160px;
-    width: 516px;
+    width: 506px;
     padding: 12px;
     box-sizing: border-box;
     overflow: hidden;
@@ -63,15 +64,15 @@ button {
 }
 .buttons {
     display: flex;
-    width: 516px;
+    justify-content: center;
+    width: fit-content;
     height: 516px;
 }
 .numbers {
     display: flex;
     flex-wrap: wrap;
-    justify-content: center;
     align-items: center;
-    max-width: 308px;
+    width: 298px;
 }
 .operators {
     display: flex;
@@ -79,10 +80,13 @@ button {
     align-items: center;
     justify-content: space-around;
     flex-wrap: wrap;
+    width: 194px;
 }
 #equal {
-    height: 198px;
-    background-color: rgb(94, 243, 144);
+    height: 196px;
+    background-color: rgb(152, 216, 181);
+}
+#clear, #delete, #equal {
     color: black;
 }
 .frame, .buttons, .numbers, .operators {
@@ -92,8 +96,8 @@ button {
     color: rgb(223, 223, 223);
 }
 button, .frame {
-    background-color: rgb(65, 65, 65);
+    background-color: rgb(54, 54, 54);
 }
 #clear, #delete {
-    background-color: rgb(252, 114, 114);
+    background-color: rgb(255, 154, 154);
 }
